#31 Prevent grey bands Google maps on mobile

--- a/www/media/com_volunteers/css/frontend.css
+++ b/www/media/com_volunteers/css/frontend.css
@@ -1,10 +1,10 @@
+.volunteer-image {
+	width: 60px;
+}
+
 .table .volunteer-image img {
 	width: 50px;
 	height: 50px;
-}
-
-.report .report-title {
-	margin-top: 0;
 }
 
 .members img {
@@ -95,6 +95,18 @@
 	text-decoration: none;
 }
 
-.volunteer-image {
-	width: 60px;
+#map-canvas {
+	height: 200px;
+}
+
+@media (min-width: 481px) {
+	#map-canvas {
+		height: 300px;
+	}
+}
+
+@media (min-width: 767px) {
+	#map-canvas {
+		height: 400px;
+	}
 }
